--- a/style.css
+++ b/style.css
@@ -3,13 +3,18 @@ body {
   margin: 0;
   padding: 0;
 }
-
+footer,
+.header {
+  background-color: rgb(100, 113, 113);
+  text-align: center;
+}
 .main {
   padding: 1em;
   display: flex;
   flex-direction: row;
   gap: 5px;
   height: 100%;
+  justify-content: center;
 }
 .main div {
   border: 2px black solid;
@@ -22,11 +27,21 @@ body {
 .player {
   width: 25%;
   height: 500px;
-
 }
 .chess-board {
+  
   width: 400px;
   height: 400px;
-  position: ;
   background: #000;
+  align-items: baseline;
+}
+
+@media (max-width: 500px) {
+ .main{
+  display: flex;
+  flex-direction: column;
+ }
+ .player ,.logs{
+  height: 40px;
+ }
 }
