--- a/style.css
+++ b/style.css
@@ -21,10 +21,12 @@ footer,
 }
 
 .logs {
+  display: none;
   width: 20%;
   height: 500px;
 }
 .player {
+  display: none;
   width: 20%;
   height: 500px;
 }
@@ -33,12 +35,17 @@ footer,
   width: 320px;
   height: 320px;
   display: flex;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
 
 .square{
   width: 40px;
   height: 40px;
+  /* border-collapse:collapse ; */
+  /* border: 1px solid black; */
+
+ 
+  
 }
 .beige {
   background-color: rgb(110, 110,98);
